Fix z-index in left top corner

--- a/css/pages.less
+++ b/css/pages.less
@@ -106,6 +106,7 @@ body {
     left: -5px;
     position: absolute;
     top: -5px;
+    z-index: 1;
   }
   #header-menu {
     with: 100%;
@@ -351,6 +352,7 @@ ul.links li {
     .block-title {
       padding: 0 @grid-margin;
       .white;
+      .fs(24px);
     }
 
     .content {
